@@ -1,3 +1,12 @@
+2004-01-07 Erik Petrich <epetrich@ivorytower.norman.ok.us>
+
+	* src/SDCCsymt.c (processFuncArgs): fixed superflous allocation noted
+	in bug #860505
+	* src/SDCCmem.c (printAllocInfoSeg, printAllocInfo): minor changes to
+	how the function variable allocation summary is displayed; also
+	include information about variables allocated to the overlay
+	segment
+
 2004-01-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>
 
 	* as/mcs51/lkmain.c: Help about -Y option
